// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkBlockquote should render correctly 1`] = `
<blockquote
  className="bpk-blockquote"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</blockquote>
`;

exports[`BpkBlockquote should render correctly with additional spacing 1`] = `
<blockquote
  className="bpk-blockquote bpk-blockquote--extra-spacing"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</blockquote>
`;
